# coe-cli

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.windows-build  LICENSE  README.md  coe-cli-mac.spec  coe.py  coe_analyze_usage.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  swing_cli_prd.md
.github/workflows/: build-windows-exe.yml
actions/: ai_template_assistant.py  file_editor.py  file_manager.py  file_tree_analyzer.py  template_manager.py
cli/: completer.py  main.py
cli/coders/: __init__.py  base_coder.py  editblock_coder.py  editblock_prompts.py  repo_mapper.py  udiff_coder.py  udiff_prompts.py  wholefile_coder.py  wholefile_prompts.py
cli/core/: analyzer.py  ask_prompts.py  base_prompts.py  context_manager.py  debug_manager.py  edit_prompts.py  mcp_integration.py
cli/ui/: __init__.py  components.py  formatters.py  interactive.py  panels.py
docs/: features_sepc_roadmap.md  features_spec.md
llm/: service.py
mcp/: __init__.py  client.py  tools.py
prompts/: c_file_prompt.py  generic_file_prompt.py  sql_file_prompt.py  xml_file_prompt.py
tests/: test_with_fixtures.py
