[tool.poetry]
name = "coe-cli"
version = "0.1.0"
description = "CLI interface for CoE LLM assistant"
license = "Apache-2.0"
authors = ["Minju Kim <you@example.com>"]
readme = "README.md"
packages = [
  { include = "cli" },
  { include = "llm" },
  { include = "actions" }
]

[tool.poetry.dependencies]
python = "^3.8"
prompt_toolkit = "^3.0"
click = "^8.1.0"
openai = "^0.27.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
coe-cli = "cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
